fixed some exceptions

--- a/app/portal.ipynb
+++ b/app/portal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "username.clear()\n",
     "username.send_keys(\"your admission number\")\n",
     "password.clear()\n",
-    "password.send_keys(\"your portal password\")\n",
+    "password.send_keys(\"your password\")\n",
     "\n",
     "#target the login button and click it\n",
     "button = WebDriverWait(driver, 2).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"button[type='submit']\"))).click()"
@@ -45,13 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reg No: 22-2285\n",
+      "Name: KELLY TOROITICH LIMO\n",
+      "Gender: Male\n",
+      "Address: <selenium.webdriver.remote.webelement.WebElement (session=\"55b4ad0ea8336d1cd7f4946dd49b6a14\", element=\"f.71AB25C386D3DAE4B3614B6444331336.d.D6FB5D7C6B7D9EFA62C13B0378FF96E8.e.60\")>\n",
+      "Email Address: <selenium.webdriver.remote.webelement.WebElement (session=\"55b4ad0ea8336d1cd7f4946dd49b6a14\", element=\"f.71AB25C386D3DAE4B3614B6444331336.d.D6FB5D7C6B7D9EFA62C13B0378FF96E8.e.61\")>\n",
+      "date of Birth: 03/03/2004\n",
+      "Campus: ATHI\n"
+     ]
+    }
+   ],
    "source": [
     "# get the registration number\n",
     "# Wait for the registration number element to be visible\n",
-    "timeout = 10\n",
+    "# ? feel free to tweak the timeout based on the speed of your internet :)\n",
+    "timeout = 20\n",
     "\n",
     "try:\n",
     "    reg_no_element = WebDriverWait(driver, timeout).until(EC.visibility_of_element_located((By.XPATH, \"//label[text()='Reg. No']/following-sibling::div/span[@class='badge badge-soft-pink']\")))\n",
@@ -79,11 +94,10 @@
     "    # lets get fee balance\n",
     "    fee_balance = WebDriverWait(driver, timeout).until(EC.visibility_of_element_located((By.XPATH, \"//tbody\")))\n",
     "    # find the number of rows in the table\n",
-    "    row = len(WebDriverWait(driver, timeout).until(EC.visibility_of_element_located((By.XPATH, \"//tr\"))))\n",
-    "    cols = len(WebDriverWait(driver, timeout).until(EC.visibility_of_element_located((By.XPATH, \"//tr[1]/td\"))))\n",
-    "\n",
-    "    \n",
-    "    print(\"cols: \",cols)\n",
+    "    # ? this are for debugging purposes\n",
+    "    # row = len(WebDriverWait(driver, timeout).until(EC.visibility_of_element_located((By.XPATH, \"//tr\"))))\n",
+    "    # cols = len(WebDriverWait(driver, timeout).until(EC.visibility_of_element_located((By.XPATH, \"//tr[1]/td\"))))\n",
+    "    # print(\"cols: \",cols)\n",
     "\n",
     "    print(\"Reg No:\", reg_no)\n",
     "    print(\"Name:\", name)\n",
